--- a/Filmovi.csproj
+++ b/Filmovi.csproj
@@ -174,6 +174,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206231846472_InitialCreate.cs" />
+    <Compile Include="Migrations\202206231846472_InitialCreate.Designer.cs">
+      <DependentUpon>202206231846472_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202206280955405_InitialModel.cs" />
+    <Compile Include="Migrations\202206280955405_InitialModel.Designer.cs">
+      <DependentUpon>202206280955405_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -258,6 +267,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202206231846472_InitialCreate.resx">
+      <DependentUpon>202206231846472_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206280955405_InitialModel.resx">
+      <DependentUpon>202206280955405_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
