--- a/Filmovi.csproj
+++ b/Filmovi.csproj
@@ -186,11 +186,16 @@
     <Compile Include="Migrations\202206281009409_AddIsSubscribedToNewsLetter.Designer.cs">
       <DependentUpon>202206281009409_AddIsSubscribedToNewsLetter.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206281018146_addMembershipType.cs" />
+    <Compile Include="Migrations\202206281018146_addMembershipType.Designer.cs">
+      <DependentUpon>202206281018146_addMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -281,6 +286,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202206281009409_AddIsSubscribedToNewsLetter.resx">
       <DependentUpon>202206281009409_AddIsSubscribedToNewsLetter.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206281018146_addMembershipType.resx">
+      <DependentUpon>202206281018146_addMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
