--- a/Filmovi.csproj
+++ b/Filmovi.csproj
@@ -190,6 +190,10 @@
     <Compile Include="Migrations\202206281018146_addMembershipType.Designer.cs">
       <DependentUpon>202206281018146_addMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206281020445_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\202206281020445_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>202206281020445_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -289,6 +293,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202206281018146_addMembershipType.resx">
       <DependentUpon>202206281018146_addMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206281020445_PopulateMembershipTypes.resx">
+      <DependentUpon>202206281020445_PopulateMembershipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
