--- a/Filmovi.csproj
+++ b/Filmovi.csproj
@@ -194,6 +194,10 @@
     <Compile Include="Migrations\202206281020445_PopulateMembershipTypes.Designer.cs">
       <DependentUpon>202206281020445_PopulateMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206281042452_ApplyAnnotationsToCustomName.cs" />
+    <Compile Include="Migrations\202206281042452_ApplyAnnotationsToCustomName.Designer.cs">
+      <DependentUpon>202206281042452_ApplyAnnotationsToCustomName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -296,6 +300,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202206281020445_PopulateMembershipTypes.resx">
       <DependentUpon>202206281020445_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206281042452_ApplyAnnotationsToCustomName.resx">
+      <DependentUpon>202206281042452_ApplyAnnotationsToCustomName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
