--- a/Filmovi.csproj
+++ b/Filmovi.csproj
@@ -207,6 +207,10 @@
     <Compile Include="Migrations\202206290047110_SetNameOfMembershipTypes.Designer.cs">
       <DependentUpon>202206290047110_SetNameOfMembershipTypes.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206291033212_AddBitrhdateToCustomer.cs" />
+    <Compile Include="Migrations\202206291033212_AddBitrhdateToCustomer.Designer.cs">
+      <DependentUpon>202206291033212_AddBitrhdateToCustomer.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -320,6 +324,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202206290047110_SetNameOfMembershipTypes.resx">
       <DependentUpon>202206290047110_SetNameOfMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206291033212_AddBitrhdateToCustomer.resx">
+      <DependentUpon>202206291033212_AddBitrhdateToCustomer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
