--- a/Filmovi.csproj
+++ b/Filmovi.csproj
@@ -175,6 +175,15 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206300117076_InitialModel.cs" />
+    <Compile Include="Migrations\202206300117076_InitialModel.Designer.cs">
+      <DependentUpon>202206300117076_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202206300118302_InitialModel1.cs" />
+    <Compile Include="Migrations\202206300118302_InitialModel1.Designer.cs">
+      <DependentUpon>202206300118302_InitialModel1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -262,6 +271,14 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.4.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202206300117076_InitialModel.resx">
+      <DependentUpon>202206300117076_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206300118302_InitialModel1.resx">
+      <DependentUpon>202206300118302_InitialModel1.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
