--- a/Filmovi.csproj
+++ b/Filmovi.csproj
@@ -187,11 +187,16 @@
     <Compile Include="Migrations\202206300125150_AddIsSubscribeToCustomer.Designer.cs">
       <DependentUpon>202206300125150_AddIsSubscribeToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206300129239_AddMembershipType.cs" />
+    <Compile Include="Migrations\202206300129239_AddMembershipType.Designer.cs">
+      <DependentUpon>202206300129239_AddMembershipType.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -285,6 +290,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202206300125150_AddIsSubscribeToCustomer.resx">
       <DependentUpon>202206300125150_AddIsSubscribeToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206300129239_AddMembershipType.resx">
+      <DependentUpon>202206300129239_AddMembershipType.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
