--- a/Filmovi.csproj
+++ b/Filmovi.csproj
@@ -195,6 +195,10 @@
     <Compile Include="Migrations\202206300132296_PupulateMembershipType.Designer.cs">
       <DependentUpon>202206300132296_PupulateMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202206300136322_ApplayAnnotationToCustomerName.cs" />
+    <Compile Include="Migrations\202206300136322_ApplayAnnotationToCustomerName.Designer.cs">
+      <DependentUpon>202206300136322_ApplayAnnotationToCustomerName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -300,6 +304,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202206300132296_PupulateMembershipType.resx">
       <DependentUpon>202206300132296_PupulateMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202206300136322_ApplayAnnotationToCustomerName.resx">
+      <DependentUpon>202206300136322_ApplayAnnotationToCustomerName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
