--- a/Filmovi.csproj
+++ b/Filmovi.csproj
@@ -211,6 +211,14 @@
     <Compile Include="Migrations\202207011152074_SetNameOfMembershipType.Designer.cs">
       <DependentUpon>202207011152074_SetNameOfMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202207011157087_AddBirthdayToCustomer.cs" />
+    <Compile Include="Migrations\202207011157087_AddBirthdayToCustomer.Designer.cs">
+      <DependentUpon>202207011157087_AddBirthdayToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202207011159252_AddBirthdayToCustomars.cs" />
+    <Compile Include="Migrations\202207011159252_AddBirthdayToCustomars.Designer.cs">
+      <DependentUpon>202207011159252_AddBirthdayToCustomars.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -328,6 +336,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202207011152074_SetNameOfMembershipType.resx">
       <DependentUpon>202207011152074_SetNameOfMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202207011157087_AddBirthdayToCustomer.resx">
+      <DependentUpon>202207011157087_AddBirthdayToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202207011159252_AddBirthdayToCustomars.resx">
+      <DependentUpon>202207011159252_AddBirthdayToCustomars.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
