--- a/Filmovi.csproj
+++ b/Filmovi.csproj
@@ -219,9 +219,26 @@
     <Compile Include="Migrations\202207011159252_AddBirthdayToCustomars.Designer.cs">
       <DependentUpon>202207011159252_AddBirthdayToCustomars.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202207011205080_AddMovie.cs" />
+    <Compile Include="Migrations\202207011205080_AddMovie.Designer.cs">
+      <DependentUpon>202207011205080_AddMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202207011207565_Genres.cs" />
+    <Compile Include="Migrations\202207011207565_Genres.Designer.cs">
+      <DependentUpon>202207011207565_Genres.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202207011211563_AddFildInMovie.cs" />
+    <Compile Include="Migrations\202207011211563_AddFildInMovie.Designer.cs">
+      <DependentUpon>202207011211563_AddFildInMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202207011212364_AddFildInGenres.cs" />
+    <Compile Include="Migrations\202207011212364_AddFildInGenres.Designer.cs">
+      <DependentUpon>202207011212364_AddFildInGenres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -292,6 +309,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -342,6 +360,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202207011159252_AddBirthdayToCustomars.resx">
       <DependentUpon>202207011159252_AddBirthdayToCustomars.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202207011205080_AddMovie.resx">
+      <DependentUpon>202207011205080_AddMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202207011207565_Genres.resx">
+      <DependentUpon>202207011207565_Genres.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202207011211563_AddFildInMovie.resx">
+      <DependentUpon>202207011211563_AddFildInMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202207011212364_AddFildInGenres.resx">
+      <DependentUpon>202207011212364_AddFildInGenres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
